--- a/Recommendating.Api/appsettings.json
+++ b/Recommendating.Api/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PostgreSettings": {
+    "Host": "localhost",
+    "Port": "5432",
+    "Database": "RecommendatingDb",
+    "Pooling": true
+  }
 }
